@@ -38,6 +38,7 @@ ChangeLog
 [-] * SMSD now properly frees allocated memory.
 [+] * SMSD now handles SIGHUP for rereading configuration.
 [+] * Added LSB init script for SMSD.
+[+] * SMSD can now log to stderr/stdout.
     
 20081219 - 1.22.1
 
